--- a/assets/stylesheets/_libraries.sass
+++ b/assets/stylesheets/_libraries.sass
@@ -1,4 +1,5 @@
+@import 'variables/all'
+@import 'mixins/all'
+
 @import '../../node_modules/compass-mixins/lib/compass'
 @import '../../node_modules/compass-mixins/lib/compass/reset/utilities'
-
-+global-reset
