--- a/assets/stylesheets/styles.sass
+++ b/assets/stylesheets/styles.sass
@@ -1,9 +1,9 @@
-@import 'variables/all'
-@import 'mixins/all'
 @import 'libraries'
+@import 'vendors'
 
 @import 'overrides/tags'
 @import 'overrides/classes'
 
 @import 'components/all'
+@import 'apps/all'
 @import 'overrides/vendors'
