Enhance stylesheets: Add math functions to styles, update line-height in tags, and define padding variable in globals

--- a/assets/stylesheets/variables/_globals.sass
+++ b/assets/stylesheets/variables/_globals.sass
@@ -1,4 +1,6 @@
-$padding: 40px
 $main-font: Helvetica, Arial, sans-serif
 $main-font-size: 16px
+
+$padding: 40px
 $container-width: 900px
+$line-height: 130%
